--- a/result.html
+++ b/result.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <title></title>
     <script>
-        function paint(){
-            var svgobject = document.getElementById('result'); // Находим тег <object>
+        function paint(name){
+            var svgobject = document.getElementById(name); // Находим тег <object>
             if ('contentDocument' in svgobject) {              // У нас действительно там что-то есть?
-                var velocity = 150; // mm/sec
+                var velocity = 2000; // mm/sec
                 var delay = 0;
-                var paths = document.getElementById('result').contentDocument.querySelectorAll('g path');
+                var paths = document.getElementById(name).contentDocument.querySelectorAll('g path');
                 var transition = null;
                 for (var i = 0; i < paths.length; i++) {
                     l = paths[i].getTotalLength();
                     paths[i].style.transition = paths[i].style.WebkitTransition = 'none';
                     paths[i].style.strokeDasharray = l + ' ' + l;
                     paths[i].style.strokeDashoffset = l;
-                    paths[i].getBoundingClientRect();
+                    paths[i].style.markerStart = 'none';
+                    paths[i].style.markerEnd = 'none';
                     time = l / velocity;
                     transition = 'stroke-dashoffset ' + time + 's ease-in-out ' + delay + 's';
                     delay += time;
+                    paths[i].getBoundingClientRect();
                     paths[i].style.transition = paths[i].style.WebkitTransition = transition;
                     paths[i].style.strokeDashoffset = '0';
                 }
@@ -33,8 +35,8 @@
 </head>
 <body>
 <object data="./result/01_yellow_splitted.svg" type="image/svg+xml" id="result"></object>
-<div>
-    <button autofocus="true" onclick="paint()">Paint</button>
+<div style="margin: auto 40%;">
+    <button style="width: 100%; height: 60px;" autofocus="true" onclick="paint('result')">Paint</button>
 </div>
 
 </body>
