reverse works with one subpath paths only

--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@
 
 </head>
 <body>
-<object data="./result/01_black_splitted.svg" type="image/svg+xml" id="result"></object>
+<object data="./result/01_yellow (_splitted.svg" type="image/svg+xml" id="result"></object>
 <div style="margin: auto 40%;">
     <button style="width: 100%; height: 60px;" autofocus="true" onclick="paint('result')">Paint</button>
 </div>
